# server/src/modules/yellowsheets/yellowsheet.route.js
@@ -1,0 +1,10 @@
+const express = require('express');
+const router = express.Router();
+
+
+const yellowsheetController = require('./yellowsheet.controller');
+
+// Route to get ERP yellowsheets
+router.get('/:partnum/:revision/:layer', yellowsheetController.getErp_yspartnum);
+
+module.exports = router;
